fix: fix image overflow

--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -211,20 +211,17 @@ section.nc-box {
         font-size: var(--font-size-small);
         color: var(--color-text-muted);
         margin-block-start: var(--spacing-base);
-
-        /* &.column-2 {
-            grid-column: 2;
-        } */
     }
 
-    &>picture {
+    &>a {
         display: grid;
         place-items: center;
         min-block-size: 0;
         max-block-size: 100%;
     }
 
-    & img {
+    & img, & picture {
+        overflow: hidden;
         inline-size: 100%;
         block-size: 100%;
         max-block-size: 100%;
